--- a/apkmon/package.json
+++ b/apkmon/package.json
@@ -22,6 +22,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
+    "evolution": "^0.1.0",
     "pokeapi": "0.0.1",
     "pokeapi-typescript": "^2.1.0",
     "rxjs": "~6.6.0",
@@ -30,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.4",
-    "@angular/cli": "~11.2.4",
+    "@angular/cli": "11.2.14",
     "@angular/compiler": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
